src/app/app.component.scss
* {
  font-family: Arial, 'sans serif';
}

.container {
  width: 100%;
  margin: 0 auto;
}

.header-container {
  padding-left: 20px;
  padding-right: 20px;
  margin-top: 10px;
  margin-bottom: 10px;
  height: 69px;

  position: sticky;
  top: 0;
  z-index: 100;

  background: white;
}

.header {
  margin: 20px auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 60px;
}

.header-button {
  width: 48px;
  height: 48px;

  cursor: pointer;
  background-size: contain;
}

.home-button {
  background-image: url('../assets/logo/main-logo.svg');
}

.account-button {
  background-image: url('../assets/logo/account.svg');
}

.sign-in-button {
  cursor: pointer;
}

.horizontal-line {
  margin: 0 auto;
  margin-bottom: 0;
  height: 0px;
  width: 1800px;
  border-bottom: 1px solid dimgrey;
}

